Add general clarifications and improvements

--- a/assets/acronyms.tex
+++ b/assets/acronyms.tex
@@ -22,6 +22,8 @@
 
 \newacronym[longplural=interrogaciones generales]{gi}{GI}{interrogación general}
 
+\newacronym[longplural=informaciónes a 90 días]{i90dia}{I90DIA}{información a 90 días}
+
 \newacronym[longplural=sistemas de control industrial]{ics}{ICS}{sistema de control industrial}
 
 \newacronym[longplural=zonas industriales desmilitarizadas]{idmz}{IDMZ}{zona industrial desmilitarizada}
