--- a/assets/chapter10.tex
+++ b/assets/chapter10.tex
@@ -2,11 +2,11 @@
 
 \chapter*{Conclusions and future work}%
 \label{makereference10}
-\addcontentsline{toc}{chapter}{Introduction}
+\addcontentsline{toc}{chapter}{Conclusions and future work}
 
 \section*{Conclusions}
 
-In conclusion, a cross-market battery optimization system has been successfully designed, developed, deployed, and validated across multiple installations on the iberian market. The system manages dozens of megawatt hours daily and generates millions of euros in expected annual revenue by cycling battery energy storage systems, which satisfies the proposed main objective.
+In conclusion, a cross-market battery optimization system has been successfully designed, developed, deployed, and validated across multiple installations on the iberian market. The system manages dozens of megawatt hours daily and generates millions of euros in expected annual revenue by cycling battery energy storage systems, which satisfies the proposed main objective, in collaboration with the telecommunications department and market agents of the corresponding energy utility.
 
 In turn, from the perspective of the fulfillment of secondary objectives, the maximization of profitability has been sought through the optimization of market positions, together with the consideration of battery degradation, cycling them in a stable and controlled manner through the business logic of the modeling. Furthermore, regulatory requirements have been met, mainly defined by the system operator in the form of technical limits, thus avoiding possible financial penalties. The security of the operation has been guaranteed by deploying part of the integration with the physical infrastructure in an industrial demilitarized zone, preventing the exposure of energy asset information to unauthorized networks. Also, the design maintains a generalized architecture, being able to operate in multiple installations without any modification of the system's logic. Improved facilities have been provided for market agents and telecommunication operators to monitor the system, and automatic response to failures, such as the lack of availability, has also been taken into account. Finally, an economic feasibility analysis has been carried out, showing measurable results.
 
@@ -18,9 +18,9 @@ Furthermore, a structural modeling of the physical scenario of the installations
 
 Finally, the command and control of the system have been appropriately specified, in the form of setpoints for selecting the power profile of the batteries and their corresponding return to technical minimum, along with the quoting of offer prices for buy and sell positions, using a bidding algorithm per half charge cycle. In addition, to facilitate supervision for market agents and telecommunication operators, a dashboard has been developed through which the automatic behavior of the system can be monitored, being able to take manual control if necessary.
 
-With this, energy arbitrage in the market has been enabled for the installations the system has been deployed at. If it were not for it, as the market operator had was no other alternative solution currently deployed on the iberian market, the installations to be controlled would have lost the arbitrage opportunities or would have to be commanded manually by telecommunication operators, an absolutely inadmissible situation due to the complexity of the whole operation.
+With this, energy arbitrage in the market has been enabled for the installations the system has been deployed at. If it were not for it, as the energy utility had was no other alternative solution currently deployed on the iberian market, the installations to be controlled would have lost the arbitrage opportunities or would have to be commanded manually by telecommunication operators, an absolutely inadmissible situation due to the complexity of the whole operation.
 
-It is noteworthy that both battery energy storage systems and, therefore, cross-market battery optimization systems, are still in their infancy, at least in Europe. Precisely, according to a study on the use of storage technologies~\cite{hu2022potential}, ``the main energy storage system in Europe is still pumped hydroelectricity''. This means that, seeing how the landscape of electrical technologies is increasingly focusing on these battery technologies, it is likely that more sophisticated control systems will come to market. Although, currently, installations with battery energy storage systems are few and far between compared to the rest, market operators seek to incorporate them in all renewable installations to improve energy utilization. Therefore, while the implemented system has been successfully deployed throughout the country, it may be necessary to take new considerations in this regard and take into account said alternatives when the daily cycled energy might equal or exceed the amount of other well established energy assets'. The non-confidential censored code is available on GitHub\footnote{\url{https://github.com/josugoar/optibat}}.
+It is noteworthy that both battery energy storage systems and, therefore, cross-market battery optimization systems, are still in their infancy, at least in Europe. Precisely, according to a study on the use of storage technologies~\cite{hu2022potential}, ``the main energy storage system in Europe is still pumped hydroelectricity''. This means that, seeing how the landscape of electrical technologies is increasingly focusing on these battery technologies, it is likely that more sophisticated control systems will come to market. Although, currently, installations with battery energy storage systems are few and far between compared to the rest, energy utilities seek to incorporate them in all renewable installations to improve energy utilization. Therefore, while the implemented system has been successfully deployed throughout the country, it may be necessary to take new considerations in this regard and take into account said alternatives when the daily cycled energy might equal or exceed the amount of other well established energy assets'. The non-confidential censored code is available on GitHub\footnote{\url{https://github.com/josugoar/optibat}}.
 
 \section*{Future work}
 
@@ -30,4 +30,4 @@ While integration with regulation markets is definitely the most notable improve
 
 In addition, the most realistic future work comes in the form of integrating and deploying the optimization system in the growing number of new hybrid installations having energy storage assets, which are being continuously incorporated into the grid. Precisely and as has been previously detailed, battery energy storage systems are in continuous growth and, in fact, during the development process new storage systems have even become available.
 
-It should be noted that efforts have been made for the maintenance and enhancement of the relevant work from the corresponding market operator, with the aim of guaranteeing the continuation of its life cycle, in a way that its maintenance and deployment continue under a new team's supervision.
+It should be noted that efforts have been made for the maintenance and enhancement of the relevant work from the corresponding energy utility, with the aim of guaranteeing the continuation of its life cycle, in a way that its maintenance and deployment continue under a new team's supervision.
