--- a/assets/chapter8.tex
+++ b/assets/chapter8.tex
@@ -6,7 +6,7 @@
 \section{Conclusiones}%
 \label{makereference8.1}
 
-En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactoriamente un sistema de optimización de baterías a lo largo de múltiples instalaciones vinculadas a la entidad energética pertinente en la península, el cual mueve docenas de megavatios hora al día y genera millones de euros de ingresos esperados al año mediante el ciclado de \glspl{bess}, satisfaciendo así el objetivo principal propuesto. El flujo de información del sistema se representa en la figura~\ref{fig:arquitectura-control}.
+En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactoriamente un sistema de optimización de baterías a lo largo de múltiples instalaciones vinculadas a la entidad energética pertinente en la península, el cual mueve docenas de megavatios hora al día y genera millones de euros de ingresos esperados al año mediante el ciclado de \glspl{bess}, satisfaciendo así el objetivo principal propuesto, en colaboración con el departamento de telecontrol y agentes de mercado de la entidad energética correspondiente. El flujo de información del sistema se representa en la figura~\ref{fig:arquitectura-control}.
 
 \begin{figure}
   \centering
