--- a/assets/chapter2.tex
+++ b/assets/chapter2.tex
@@ -32,9 +32,7 @@ Los \glspl{bess} en los mercados eléctricos, aunque prometedores, se encuentran
 
 Por ello, la situación tecnológica de los optimizadores de \glspl{bess} varía significativamente entre el mercado eléctrico ibérico, europeo y demás, debido a diferencias en el diseño, marcos regulatorios e incentivos políticos.
 
-Por un lado, el mercado ibérico, el pertinente al desarrollo realizado, presenta tanto oportunidades como barreras para los \glspl{bess}, y es que el altamente notorio apoyo de las tecnologías renovables crea una volatilidad de precios\footnote{Debido a la cantidad de activos solares, por ejemplo, los precios se desploman cuando hace sol, pero cuando no hay recursos renovables, los precios pueden llegar a dispararse, teniendo que hacer uso de tecnologías energéticas más caras.}, que puede ser aprovechada mediante el arbitraje de energía~\cite{hu2022potential}, observado en la figura~\ref{fig:arbitraje-tecnologia}.
-
-Sin embargo, la regulación española ha sido anteriormente considerada uno de los principales impedimentos~\cite{hu2021barriers} con respecto a las tasas energéticas al cargar y descargar de la red, aunque la normativa haya evolucionado para mitigar estos problemas con grandes ayudas del estado dirigidas a las baterías, en este caso.
+Por un lado, el mercado ibérico, el pertinente al desarrollo realizado, presenta tanto oportunidades como barreras para los \glspl{bess}, y es que el altamente notorio apoyo de las tecnologías renovables crea una volatilidad de precios\footnote{Debido a la cantidad de activos solares, por ejemplo, los precios se desploman cuando hace sol, pero cuando no hay recursos renovables, los precios pueden llegar a dispararse, teniendo que hacer uso de tecnologías energéticas más caras.}, que puede ser aprovechada mediante el arbitraje de energía~\cite{hu2022potential}, observado en la figura~\ref{fig:arbitraje-tecnologia}. Además, existen grandes ayudas del estado dirigidas a las baterías~\cite{hu2021barriers}, en este caso.
 
 En la actualidad, se subraya que la producción de las baterías en mercado ibérico es ínfima en comparación, figura~\ref{fig:comparacion-energia-ciclada} obtenida directamente de \gls{ree}, pero estudios económicos muestran la viabilidad potencial de los \gls{bess} si se implementa una estrategia de optimización adecuada~\cite{he2015optimal}.
 
