--- a/assets/chapter6.tex
+++ b/assets/chapter6.tex
@@ -562,6 +562,6 @@ Finalmente, se presentan los \gls{kpi} en forma de los ingresos obtenidos por en
 \begin{figure}
   \centering
   \includegraphics[width=0.75\linewidth]{figures/limitaciones-tecnicas.png}
-  \caption[Limitaciones de programa de la instalación.]{Limitaciones de programa de la instalación.}%
+  \caption[limitaciones por seguridad de la instalación.]{limitaciones por seguridad de la instalación.}%
   \label{fig:limitaciones-tecnicas}
 \end{figure}
