--- a/assets/chapter9.tex
+++ b/assets/chapter9.tex
@@ -20,7 +20,7 @@ It is just then that the need for the creation of a battery optimization system 
 
 In fact, this is how \textsc{Optibat} is born, the self developed battery optimization system in the electricity market, successfully deployed in multiple energy installations throughout the country, which cycles dozens of megawatt hours per day and generates millions of euros in projected annual revenue. It manages to solve the manual bidding work of market agents and telecommunications operators, previously necessary for incorporating the batteries' positions into the market.
 
-With this, the design decisions related to the integration of the system and the components of the existing architecture are detailed (that is, fundamental aspects of the operation that the market operator, owning the energy assets, has previously available), along the development of all the elements to be taken into account, the validation to ensure safety and correct operation, the deployment in relation to the commissioning in large scale installations, and the comparative experimentation in search of the best mode of operation. The non-confidential censored code is available on GitHub\footnote{\url{https://github.com/josugoar/optibat}}.
+With this, the design decisions related to the integration of the system and the components of the existing architecture are detailed (that is, fundamental aspects of the operation that the energy utility, owning the energy assets, has previously available), along the development of all the elements to be taken into account, the validation to ensure safety and correct operation, the deployment in relation to the commissioning in large scale installations, and the comparative experimentation in search of the best mode of operation. The non-confidential censored code is available on GitHub\footnote{\url{https://github.com/josugoar/optibat}}.
 
 This way, the system is divided into the aforementioned sections. Firstly, the state of the art is introduced in Chapter~\ref{makereference2}. The operational infrastructure, explained in Chapter~\ref{makereference3}, manages the lowest level interaction layer available. The market environment, specified in Chapter~\ref{makereference4}, determines the information extracted from the regulatory institutions with which it communicates with. The structural modeling, detailed in Chapter~\ref{makereference5}, discusses the business logic of the decisions to be made. The command and control, specified in Chapter~\ref{makereference6}, explains the feedback loop to the physical assets and the interaction of market agents and telecommunications operators with the system. Finally, the carried out experiments are described in Chapter~\ref{makereference7} and the conclusions in Chapter~\ref{makereference8}.
 
@@ -60,7 +60,7 @@ In contrast, the scope does not include the physical control of the electrical l
 
 Nor is the deployment of the central plant information system itself relevant to the development, since other energy technologies make use of it beyond batteries. This does not mean that, while the plant control system already exists, the system does not perform the integration of the physical energy assets with the plant information system through its extension. The sole exception is the deployment of the plant information system itself.
 
-Finally, the project must consider external processes of the environment in which it is deployed, so there is no other option than to depend on the indirection layer of the market environment information storage (the data warehouse), on the breakdown of previously consulted traded positions given by internal services, and on the external market offer making process, which, for legal considerations, must be performed by the trusted party of the market operator that owns the energy assets.
+Finally, the project must consider external processes of the environment in which it is deployed, so there is no other option than to depend on the indirection layer of the market environment information storage (the data warehouse), on the breakdown of previously consulted traded positions given by internal services, and on the external market offer making process, which, for legal considerations, must be performed by the trusted party of the energy utility that owns the energy assets.
 
 \section*{Work plan}%
 \label{makereference9.3}
