--- a/assets/principal.tex
+++ b/assets/principal.tex
@@ -11,6 +11,7 @@
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
 \usepackage{latexsym}
+\usepackage{minted}
 \usepackage[sort&compress]{natbib}
 \usepackage{siunitx}
 \usepackage{svg}
