--- a/assets/references.bib
+++ b/assets/references.bib
@@ -99,6 +99,13 @@
   year   = {2024}
 }
 
+@misc{cnmc2025procedimientos,
+  title  = {Procedimientos de operación para la participación de demanda y almacenamiento en los servicios de no frecuencia y en la solución de restricciones técnicas e integración de la hibridación de tecnologías en el proceso de programación},
+  author = {Comisión Nacional de los Mercados y la Competencia},
+  url    = {https://www.cnmc.es/expedientes/dcoorde00722},
+  year   = {2025},
+}
+
 @misc{cnmc2024servicios,
   title  = {Resolución de 6 de marzo de 2024, de la Comisión Nacional de los Mercados y la Competencia, por la que se modifican procedimientos de operación eléctricos para la participación de la demanda y el almacenamiento en los servicios de no frecuencia y en la solución de restricciones técnicas e integración de la hibridación de tecnologías en el proceso de programación},
   author = {Comisión Nacional de los Mercados y la Competencia},
